--- a/Style.css
+++ b/Style.css
@@ -77,23 +77,27 @@ header {
 /* MAIN */
 
 section {
-    width: 85vw;
+    width: 100vw;
     max-width: 1440px;
+    display: flex;
+    justify-content: center;
 }
 
 /* SECTION 1 */
 .container {
-    position: sticky;
-    top: 0;
+    width: 85vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .container-1 {
     text-align: center;
     margin: 20px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    height: 615px;
+    position: sticky;
+    top: 0;
 }
 
 .container-1 p{
@@ -125,9 +129,169 @@ section {
 /* END SECTION 1 */
 /* SECTION 2 */
 
+.section2 {
+    background-image: url(images/bg-section-top-mobile-1.svg);
+    background-repeat: no-repeat;
+    background-size: 100vw;
+    background-position: bottom;
+}
 
+.container-2 {
+    margin: 100px 0;
+    position: sticky;
+    top: 0;
+}
 
+.container-2 h1 {
+    font-size: 70px;
+}
+
+.container-2 p{
+    color: var(--Pink);
+    text-align: center;
+    position: sticky;
+    top: 0;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.card1 {
+    margin-bottom: 100px;
+}
+
+.card img {
+    width: 35px;
+}
+
+.card2 p {
+    width: 110px;
+}
 /* END SECTION 2 */
+
+/* SECTION 3 */
+
+.section3 {
+    background: var(--Very-Pale-Blue);
+}
+
+.container-3 {
+    margin-bottom: 50px;
+    position: sticky;
+    top: 0;
+}
+
+.container-3 img{
+    width: 95%;
+}
+
+.container-3 h1 {
+    margin: 30px 0;
+}
+
+.container-3 p {
+    text-align: center;
+    font-size: 14px;
+    color: var(--Very-Dark-Cyan);
+}
+
+/* END SECTION 3 */
+
+/* CONTAINER 4 */
+
+.section4 {
+    background-image: url(images/bg-section-bottom-mobile-1.svg), url(images/bg-section-top-mobile-2.svg);
+    background-position: top, bottom;
+    background-repeat: no-repeat;
+}
+
+.container-4 {
+    margin-bottom: 50px;
+    position: sticky;
+    top: 0;
+    margin-top: 150px;
+}
+
+.container-4 img{
+    width: 95%;
+}
+
+.container-4 h1 {
+    margin: 30px 0;
+}
+
+.container-4 p {
+    text-align: center;
+    font-size: 14px;
+    color: var(--Very-Dark-Cyan);
+    margin-bottom: 120px;
+}
+
+/* END CONTAINER 4 */
+/* CONTAINER 5 */
+
+.section5 {
+    background: var(--Very-Pale-Blue);
+}
+
+.container-5 {
+    margin: 20px 0 50px;
+    position: sticky;
+    top: 0;
+}
+
+.container-5 img{
+    width: 95%;
+}
+
+.container-5 h1 {
+    margin: 30px 0;
+}
+
+.container-5 p {
+    text-align: center;
+    font-size: 14px;
+    color: var(--Very-Dark-Cyan);
+}
+
+/* END CONTAINER 5 */
+
+/* CONTAINER 6 */
+
+.section6 {
+    background-image: url(images/bg-section-bottom-mobile-2.svg), url(images/bg-footer-top-mobile.svg);
+    background-repeat: no-repeat;
+    background-position: top, bottom;
+}
+
+.container-6 {
+    margin: 150px 0 200px;
+    position: sticky;
+    top: 0;
+}
+
+.container-6 h1 {
+    text-align: center;
+}
+
+.container-6 a {
+    text-decoration: none;
+    font-family: var(--Open-Sans);
+    padding: 14px 60px;
+    background: var(--Pink);
+    color: var(--Very-Pale-Blue);
+    border-radius: 50px;
+    margin-top: 45px;
+    box-shadow: 1px 5px 10px rgba(128, 128, 128, 0.312);
+}
+
+.container-6 a:hover{
+    background: var(--Light-Pink);
+}
+
+/* END CONTAINER 6 */
 /* END MAIN */
 
 /* MEDIA QUERY */
